# aruco_cube_ros

./: CMakeLists.txt  LICENSE  README.md  aruco_cube_nodelets.xml  package.xml
cfg/: ArucoCube.cfg
config/: aruco_cube_params.yaml  cam_intrinsics.yaml
include/aruco_cube_ros/: aruco_cube_nodelet.h
launch/: aruco_cube_node.launch  aruco_cube_nodelet.launch
src/: aruco_cube_node.cpp  aruco_cube_nodelet.cpp
srv/: GetPose.srv
