<?xml version="1.0"?>
<package format="2">
  <name>aruco_cube_ros</name>
  <version>1.0.0</version>
  <description>The aruco_cube_ros package</description>

  <author>Rhys McKercher</author>
  <author>Joshua Owen</author>
  <maintainer email="dev@universalfiledrobots.com.au">Universal Field Robots</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/aruco_cube_nodelets.xml"/>
  </export>

</package>
